google db save add

--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -16,6 +16,7 @@
         </label>
         <input type="submit" class="btn btn-outline" value="로그인">
     </form>
+    <a href="/oauth2/authorization/google" class="btn btn-outline">google 로그인</a>
     <a href="/signup" class="btn btn-outline"> 회원가입</a>
 </div>
 </html>
